--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,7 +73,7 @@ img{
 		right: 0px;
 		z-index: 10;
 		height: 60px;
-		background: rgba(#fff, .4);
+		background: rgba(#fff, .8);
 		& .toggle-sp{
 			position: relative;
 			width: 80px;
@@ -388,7 +388,7 @@ img {
 			opacity:1;
 			
 			.article{
-				width: 46%;
+				width: 48%;
 				@include mq(tab){
 					width: 100%;
 				}
@@ -396,18 +396,16 @@ img {
 			.article a{
 				display: flex;
 				align-items: center;
-				width: 100%;
-				padding: 3px 6px;
 				margin-bottom: 40px;
 				justify-content: space-between;
 				box-sizing: border-box;
 				transition: all .5s;
 				border:$no-focus-style;
 				border-radius: 5px;
-				min-height: 100px;
-				
-				@include mq(sp){
-					
+				min-height:130px;
+
+				@include mq(tab){
+					min-height:100px;
 				}
 				&:hover{
 					transition: all .5s;
@@ -416,36 +414,48 @@ img {
 					border:$focus-style;
 					box-sizing: border-box;
 		
-				}		
-				img{
+				}	
+				.article_img{
 					width:30%;
-					height:50%;			
-					object-fit: cover;
+					text-align:center;
+					img{
+						width:60%;
+						height:60%;
+						object-fit: cover;
+						border-radius: 5px 0 0 5px;
+
+						@include mq(tab){
+							width:40%;
+						}
+					}
+
 				}
 				.article_remarks{
-					width: 70%;	
+					width: 70%;						
+					padding:20px;
+					@include mq(tab){
+							padding:10px;
+					}
 					
 					&_title{
-						font-size: 1.0em;
-						margin: 0 0 10px 0x;
+						font-size: 0.9rem;
+						width:100%;
 						font-weight: bold;
-						@include mq(tab){
-							font-size: .9em;
-						}
+
 						
 					}
 					&_text{
-						font-size: 0.7em;
-						margin: 10px;
-
-					
-						@include mq(tab){
-							font-size: .7em;
-						}
+						font-size: 0.8rem;
+						padding-top:5px;
+						padding-left:15px;
+					  width:100%;
+					  line-height:20px;
 					}
 					&_date{
-						font-size: 0.7em;
+						font-size: 0.7rem;
 						text-align: right;
+						padding-top:5px;
+						width:100%;
 						@include mq(tab){
 							font-size: .5em;
 						}
@@ -999,7 +1009,7 @@ img {
 			@include mq(tab){
 				transition:1.5s ease;
 				position:fixed;
-				top:10px;
+				top:5px;
 				bottom:10%;
 				height:50px;
 				left:20px;
@@ -1035,6 +1045,7 @@ img {
 		&_input{
 			width: calc(50% - 50px);
 			position: absolute;
+			top:0;
 			right:0;
 			height: 50px;
 			border:$no-focus-style;
@@ -1136,6 +1147,43 @@ img {
 						width: 100%;
 
 					}		
+				}
+				.table_container{
+					width:100%;
+					overflow: auto;
+				}
+				table{
+					margin-top:20px;
+					width:100px;
+					white-space:nowrap;
+					tr{
+						
+						
+						&:nth-child(1){
+							text-align:center;
+							border-bottom:1px solid rgba(#111,.1);
+							font-size:1.2em;
+
+							@include mq(tab){
+								font-size:1em;
+							}
+						}
+
+						&:nth-child(2n+3){
+							background: rgba(#eee,.8);
+
+						}
+						
+					}
+					td{
+						padding:5px;
+						font-size:1em;
+						line-height:40px;
+						@include mq(tab){
+								font-size:.85em;
+						}
+
+					}
 				}
 				h1 {
 					font-size: 1.1em;			
